Fixed bugs when in mobile view, scanline doesn't block one of the navbars, list doesn't overflow, adjusted activated navbar box shadows

--- a/components/AboutScreen/styles.module.css
+++ b/components/AboutScreen/styles.module.css
@@ -31,3 +31,7 @@
     width: 30%;
     margin: 2em 1em
   }
+
+  .image{
+    background-color: rgba(255,255,255,0.5);
+  }
