--- a/components/AcitvatednavBar/styles.module.css
+++ b/components/AcitvatednavBar/styles.module.css
@@ -4,7 +4,6 @@
     width: 100%;
     height: 10vh;
     margin: 0.5em 0;
-
   }
   
   .container:hover{
@@ -15,8 +14,8 @@
     width: 80%;
     background-color: steelblue;
     box-shadow: 
-       0 0.2em 0.1em 0 white,
-       0 -0.2em 0.1em 0 white
+       0 0.2em 0 0 white,
+       0 -0.2em 0 0 white
     ;
   }
   
@@ -29,9 +28,9 @@
     justify-content: center;
     align-items: center;
     box-shadow: 
-       0.2em 0 0.1em 0 white,
-       0 0.2em 0.1em 0 white,
-       0 -0.2em 0.1em 0 white
+       -0.2em 0 0 0 white inset,
+       0 0.2em 0 0 white,
+       0 -0.2em 0 0 white
     ;
   }
 
@@ -46,6 +45,7 @@
     animation-duration: 8s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+    box-shadow: 0 0 1em 0 white inset;
   }
 
   @keyframes spinningCircle{
@@ -58,4 +58,7 @@
     width : 10%;
     background-color: green;
     border-radius: 5%;
+    box-shadow: 
+    0 0.1em 0.2em 0 white inset,
+    0 -0.1em 0.2em 0 white inset;
   }
