--- a/components/LearningScreen/styles.module.css
+++ b/components/LearningScreen/styles.module.css
@@ -1,5 +1,6 @@
 .screen{
     display: flex;
     flex-direction: column;
+    padding-right: 0.5em;
   }
   
