--- a/components/PortfolioScreen/styles.module.css
+++ b/components/PortfolioScreen/styles.module.css
@@ -3,6 +3,7 @@
 .screen{
     display: flex;
     flex-direction: column;
+    padding-right:0.5em;
     overflow-y: scroll;
     height:100%
   }
