--- a/components/StartScreen/styles.module.css
+++ b/components/StartScreen/styles.module.css
@@ -33,3 +33,7 @@
     width: 30%;
     margin: 2em 1em
   }
+
+  .image > img{
+    background-color: rgba(255,255,255,0.5);
+  }
