--- a/styles/globals.css
+++ b/styles/globals.css
@@ -130,8 +130,8 @@ a{
 
 .scanline {
   width: 100%;
-  height: 100px;
-  z-index: 5;
+  height: 1px;
+  z-index: 2;
   background: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0) 0%,
@@ -140,6 +140,7 @@ a{
   );
   opacity: 0.1;
   position: absolute;
+  right:0.2em;
   bottom: 100%;
   animation: scanline 10s linear infinite;
 }
@@ -176,12 +177,19 @@ a{
 
 @keyframes scanline {
   0% {
+      height: 1px;
+      bottom: 100%;
+  }
+  79% {
+      height: 1px;
       bottom: 100%;
   }
   80% {
+      height: 100px;
       bottom: 100%;
   }
   100% {
+      height: 100px;
       bottom: 0%;
   }
 }
